@@ -79,11 +79,13 @@ struct options {
 	int	purify;		/* Purify indentation */
 	int	picture;	/* Picture mode */
 	int	single_quoted;	/* Ignore '  ' for ^G */
+	int	no_double_quoted;	/* Don't ignore " " for ^G */
 	int	c_comment;	/* Ignore text in C comments */
 	int	cpp_comment;	/* Ignore text after // comments */
 	int	pound_comment;	/* Ignore text after # comments */
 	int	vhdl_comment;	/* Ignore text after -- comments */
 	int	semi_comment;	/* Ignore text after ; comments */
+	int	tex_comment;	/* Ignore text after % comments */
 	int	hex;		/* Hex edit mode */
 	unsigned char *text_delimiters;	/* Define word delimiters */
 	unsigned char *cpara;	/* Characters which can indent paragraphcs */
