@@ -428,7 +428,7 @@ int tomatch_word(BW *bw,unsigned char *set,unsigned char *group)
 			if(peek!=NO_MORE_DATA)
 				pgetc(p);
 			if (peek=='\\') {
-			} else if (c == '"') {
+			} else if (!bw->o.no_double_quoted && c == '"') {
 				while((c = prgetc(p)) != NO_MORE_DATA) {
 					if (c == '"') {
 						c = prgetc(p);
@@ -462,14 +462,15 @@ int tomatch_word(BW *bw,unsigned char *set,unsigned char *group)
 				} else if (c != NO_MORE_DATA)
 					pgetc(p);
 			} else if ((bw->o.cpp_comment || bw->o.pound_comment ||
-			            bw->o.semi_comment || bw->o.vhdl_comment) && c == '\n') {
+			            bw->o.semi_comment || bw->o.vhdl_comment ||
+			            bw->o.tex_comment) && c == '\n') {
 				P *q = pdup(p, USTR "tomatch_word");
 				int cc;
 				p_goto_bol(q);
 				while((cc = pgetc(q)) != '\n') {
 					if (bw->o.pound_comment && cc == '$' && brch(q)=='#') {
 						pgetc(q);
-					} else if(cc=='"') {
+					} else if(!bw->o.no_double_quoted && cc=='"') {
 						while ((cc = pgetc(q)) != '\n')
 							if (cc == '"') break;
 							else if (cc == '\\') pgetc(q);
@@ -493,6 +494,9 @@ int tomatch_word(BW *bw,unsigned char *set,unsigned char *group)
 						pset(p,q);
 						break;
 					} else if (bw->o.semi_comment && cc == ';') {
+						pset(p,q);
+						break;
+					} else if (bw->o.tex_comment && cc == '%') {
 						pset(p,q);
 						break;
 					}
@@ -559,7 +563,7 @@ int tomatch_word(BW *bw,unsigned char *set,unsigned char *group)
 		while ((c=pgetc(p)) != NO_MORE_DATA) {
 			if (c == '\\') {
 				pgetc(p);
-			} else if (c == '"') {
+			} else if (!bw->o.no_double_quoted && c == '"') {
 				while ((c = pgetc(p)) != NO_MORE_DATA)
 					if (c == '"') break;
 					else if (c == '\\') pgetc(p);
@@ -567,6 +571,7 @@ int tomatch_word(BW *bw,unsigned char *set,unsigned char *group)
 				pgetc(p);
 			} else if ((bw->o.pound_comment && c == '#') ||
 				   (bw->o.semi_comment && c == ';') ||
+				   (bw->o.tex_comment && c == '%') ||
 				   (bw->o.vhdl_comment && c == '-' && brch(p) == '-')) {
 				while ((c = pgetc(p)) != NO_MORE_DATA)
 					if (c == '\n')
@@ -948,7 +953,7 @@ int utomatch(BW *bw)
 				pgetc(p);
 			} else if (d == '$' && brch(p)=='#' && bw->o.pound_comment) {
 				pgetc(p);
-			} else if (d == '"') {
+			} else if (!bw->o.no_double_quoted && d == '"') {
 				while ((d = pgetc(p)) != NO_MORE_DATA)
 					if (d == '"') break;
 					else if (d == '\\') pgetc(p);
@@ -958,6 +963,7 @@ int utomatch(BW *bw)
 					else if (d == '\\') pgetc(p);
 			} else if ((bw->o.pound_comment && d == '#') ||
 				   (bw->o.semi_comment && d == ';') ||
+				   (bw->o.tex_comment && d == '%') ||
 				   (bw->o.vhdl_comment && d == '-' && brch(p) == '-')) {
 				while ((d = pgetc(p)) != NO_MORE_DATA)
 					if (d == '\n')
@@ -1001,7 +1007,7 @@ int utomatch(BW *bw)
 				pgetc(p);
 			}
 			if (peek == '\\' && peek1!='\\') {
-			} else if (d == '"') {
+			} else if (!bw->o.no_double_quoted && d == '"') {
 				while((d = prgetc(p)) != NO_MORE_DATA) {
 					if (d == '"') {
 						d = prgetc(p);
@@ -1025,7 +1031,7 @@ int utomatch(BW *bw)
 				} else if (d != NO_MORE_DATA)
 					pgetc(p);
 			} else if ((bw->o.cpp_comment || bw->o.pound_comment ||
-			            bw->o.semi_comment || bw->o.vhdl_comment) && d == '\n') {
+			            bw->o.semi_comment || bw->o.vhdl_comment || bw->o.tex_comment) && d == '\n') {
 				P *q = pdup(p, USTR "utomatch");
 				int cc;
 				p_goto_bol(q);
@@ -1035,7 +1041,7 @@ int utomatch(BW *bw)
 					} else if (cc == '\\') {
 						if (pgetc(q) == '\n')
 							break;
-					} else if(cc=='"') {
+					} else if(!bw->o.no_double_quoted && cc=='"') {
 						while ((cc = pgetc(q)) != '\n')
 							if (cc == '"') break;
 							else if (cc == '\\') pgetc(q);
@@ -1063,6 +1069,9 @@ int utomatch(BW *bw)
 						pset(p,q);
 						break;
 					} else if (bw->o.semi_comment && cc == ';') {
+						pset(p,q);
+						break;
+					} else if (bw->o.tex_comment && cc == '%') {
 						pset(p,q);
 						break;
 					}
